# gpt-oss-amd

./: .clang-format  .commitlintrc.yaml  .gitattributes  .gitignore  .nfs00000100007ec7c900000a37  .pre-commit-config.yaml  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.ci  export_tokenizer_bin.py  forward.cpp  log  log.txt  model.cpp  profiler.cpp  pyproject.toml  readme.md  requirements.txt  run.cpp  run.sh  run_transformers.py  sampler.cpp  test_tokenizer.py  tokenizer.cpp  track.sh
.github/workflows/: ci.yaml  commitlint.yaml  pre-commit-checks.yaml
docs/: dataflow.md  legacy.md
export_model_bin/gpt-oss-20b/: README.md  export_model_bin.py
export_model_bin/gpt-oss-7m/: config.json  convert_state_dict.py  generate_bin.py
getp-csrc/: getp_eval.cpp  getp_run.cpp
hip/: BLAS.hip  attention.hip  embed.hip  moe.hip  rope.hip  sampling.hip  scheduler.hip  softmax.hip  split_qkv.hip  topk.hip
hip/gemms/: gemm_logits.hip  gemm_o.hip  gemm_qkv.hip  gemm_router.hip
include/: forward.hpp  hip_helper.hpp  model.hpp  model_20b.hpp  pp_manager.hpp  sampler.hpp  tokenizer.hpp  utils.hpp
include/hip/: tensor.hpp
src/: BLAS.hip  blas.cpp  decode.cpp  forward.cpp  forward_20b.cpp  model.cpp  model_120b.cpp  model_20b.cpp  run.cpp  sampler.cpp  tokenizer.cpp  utils.cpp
src/getp/: eval.cpp  run.cpp  run_20b.cpp
src/getp-csrc/: getp_eval.cpp  getp_run.cpp
src/hip/: moe.hip  (+23 more)
tests/: README.md  test_tokenizer.cpp  test_tokenizer.py  threadhold.json
tools/: dequantize_to_bf16.py  export_tokenizer_bin.py  run_transformers.py
(+22 files in other folders)
