[project]
name = "gpt-oss-c"
version = "0.1.0"
requires-python = "==3.12.11"
dependencies = [
    "bert-score>=0.3.13",
    "evaluate>=0.4.5",
    "gitingest>=0.3.1",
    "jsonschema>=4.25.1",
    "numpy==2.2.6",
    "packaging==25.0",
    "pre-commit>=4.3.0",
    "pyarrow==20.0.0",
    "ruff>=0.12.9",
    "safetensors==0.6.2",
    "tiktoken==0.11.0",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "transformers>=4.55.2",
]
